Cinnamon: [PopupMenu] Fix unwanted spacing in 'favorite' item-width
The commit efa733f seemed to introduced this side-effect, so let's
fix...

--- a/shell/sass/cinnamon/_common.scss
+++ b/shell/sass/cinnamon/_common.scss
@@ -1233,6 +1233,9 @@ $icon_size: 16px;
     border: 1px solid transparent;
     background-color: $base_color;
     box-shadow: $z-depth-2;
+
+    // reset minimum-limits used in generic popup-menus
+    .popup-menu-item { min-width: 0; }
   }
 
   &-favorites-button {
